--- a/app/src/Styles/CoursePresentation.css
+++ b/app/src/Styles/CoursePresentation.css
@@ -1,24 +1,26 @@
-.begin {
-  display: flex;
+.course-presentation {
+   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
   width: 100%;
   padding-top: 24px;
 }
 
-.div-begin {
+.div-course-presentation {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  width: 70%;
+  width: 75%;
   padding-top: 24px;
 }
 
-.hero1 {
+ul {
+  padding: 12px;
+}
+
+.hero4 {
   height: auto;
   padding-top: 24px;
   padding-bottom: 12px;
