--- a/app/src/Styles/PersonalPresentation.css
+++ b/app/src/Styles/PersonalPresentation.css
@@ -1,24 +1,22 @@
-.begin {
+.personal-presentation {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
   width: 100%;
   padding-top: 24px;
 }
 
-.div-begin {
+.div-personal-presentation {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
   width: 70%;
   padding-top: 24px;
 }
 
-.hero1 {
+.hero3 {
   height: auto;
   padding-top: 24px;
   padding-bottom: 12px;
