--- a/app/src/Styles/ToWhom.css
+++ b/app/src/Styles/ToWhom.css
@@ -2,6 +2,51 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: center; */
+  width: 100%;
+  padding-top: 24px;
+}
+
+.div-toWhom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+}
+
+.toWhom-objective {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   text-align: center;
+  width: 75%;
+  padding-top: 24px;
+}
+
+.div-public {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  padding-top: 24px;
+}
+
+.public-list {
+  width: 100%;
+}
+
+ul {
+  text-align: left;
+  padding-top: 6px;
+}
+
+.hero2 {
+  height: auto;
+  padding-top: 24px;
+  padding-bottom: 12px;
+  border-radius: 50%;
+  width: 75%;
 }
