--- a/app/src/index.css
+++ b/app/src/index.css
@@ -13,5 +13,11 @@ body {
 
 h3 {
   font-size: 36px;
+  padding-bottom: 12px;
   color: #7c726b;
+  text-align: center;
+}
+
+p {
+  padding: 12px;
 }
