--- a/app/src/Styles/CoursePresentation.css
+++ b/app/src/Styles/CoursePresentation.css
@@ -12,16 +12,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: justify;
   width: 75%;
   padding-top: 24px;
-}
-
-ul {
-  padding: 6px;
-}
-
-ol p {
-  padding: 6px;
 }
 
 .hero4 {
