--- a/app/src/Styles/GoogleForms.css
+++ b/app/src/Styles/GoogleForms.css
@@ -1,9 +1,8 @@
-.form {
+.form-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   padding-top: 24px;
 }
 
@@ -12,58 +11,63 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 72px;
-  width: 95%;
+  width: 75%;
 }
 
 .div-form p {
-  text-align: center;
+  text-align: justify;
 }
 
 .form {
-  height: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  padding-top: 24px;
+  height: 1100px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .form {
-    height: 1250px;
+    height: 1150px;
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 650px) {
+  .form {
+    height: 1200px;
+  }
+}
+
+@media (max-width: 530px) {
   .form {
     height: 1300px;
   }
 }
 
-@media (max-width: 470px) {
+@media (max-width: 465px) {
+  .form {
+    height: 1300px;
+  }
+  .div-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 95%;
+}
+}
+
+@media (max-width: 380px) {
   .form {
     height: 1350px;
   }
 }
 
-@media (max-width: 410px) {
-  .form {
-    height: 1400px;
-  }
-}
-
-@media (max-width: 380px) {
-  .form {
-    height: 1450px;
-  }
-}
-
 @media (max-width: 360px) {
   .form {
-    height: 1500px;
-  }
-}
-
-@media (max-width: 320px) {
-  .form {
-    height: 1550px;
+    height: 1400px;
   }
 }
 
