--- a/app/src/Styles/PersonalPresentation.css
+++ b/app/src/Styles/PersonalPresentation.css
@@ -12,8 +12,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: justify;
   width: 70%;
-  padding-top: 24px;
 }
 
 .hero3 {
