--- a/app/src/Styles/WhereDoWeBegan.css
+++ b/app/src/Styles/WhereDoWeBegan.css
@@ -13,8 +13,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  width: 70%;
+  text-align: justify;
+  width: 75%;
   padding-top: 24px;
 }
 
