--- a/app/src/index.css
+++ b/app/src/index.css
@@ -48,3 +48,11 @@ h4 {
   color: #7c726b;
   text-align: center;
 }
+
+@media (max-width: 750px) {
+  .home-title {
+    border: solid 4px #7c726b;
+    padding: 12px;
+    font-size: 24px;
+  }
+}
