Updating css for responsiveness on mobile

--- a/app/src/Styles/GoogleForms.css
+++ b/app/src/Styles/GoogleForms.css
@@ -32,6 +32,13 @@
   .form {
     height: 1150px;
   }
+  .div-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 85%;
+}
 }
 
 @media (max-width: 650px) {
@@ -42,7 +49,7 @@
 
 @media (max-width: 530px) {
   .form {
-    height: 1300px;
+    height: 1250px;
   }
 }
 
@@ -51,28 +58,37 @@
     height: 1300px;
   }
   .div-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-}
+    width: 80%;
+  }
 }
 
+@media (max-width: 430px) {
+  .form {
+    height: 1350px;
+  }
+  .div-form {
+    width: 90%;
+  }  
+}
+
+
 @media (max-width: 380px) {
+  .form {
+    height: 1300px;
+  }
+  .div-form {
+    width: 100%;
+  }  
+}
+
+@media (max-width: 360px) {
   .form {
     height: 1350px;
   }
 }
 
-@media (max-width: 360px) {
-  .form {
-    height: 1400px;
-  }
-}
-
 @media (max-width: 320px) {
   .form {
-    height: 1600px;
+    height: 1400px;
   }
 }
