--- a/app/src/Styles/CoursePresentation.css
+++ b/app/src/Styles/CoursePresentation.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: justify;
+  text-align: center;
   width: 75%;
   padding-top: 24px;
 }
