--- a/app/src/Styles/PersonalPresentation.css
+++ b/app/src/Styles/PersonalPresentation.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: justify;
+  text-align: center;
   width: 70%;
 }
 
