--- a/app/src/Styles/WhereDoWeBegan.css
+++ b/app/src/Styles/WhereDoWeBegan.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: justify;
+  text-align: center;
   width: 75%;
   padding-top: 24px;
 }
