--- a/app/src/Styles/CoursePresentation.css
+++ b/app/src/Styles/CoursePresentation.css
@@ -1,5 +1,5 @@
 .course-presentation {
-   display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -17,10 +17,19 @@
   padding-top: 24px;
 }
 
-.hero4 {
+.hero3 {
   height: auto;
   padding-top: 24px;
   padding-bottom: 12px;
   border-radius: 50%;
   width: 75%;
+}
+
+@media (max-width: 750px) {
+  .div-course-presentation {
+    width: 95%;
+  }
+  .hero3 {
+    width: 95%;
+  }
 }
