--- a/app/src/Styles/ToWhom.css
+++ b/app/src/Styles/ToWhom.css
@@ -21,3 +21,12 @@
   border-radius: 50%;
   width: 75%;
 }
+
+@media (max-width: 750px) {
+  .div-toWhom {
+    width: 95%;
+  }
+  .hero2 {
+    width: 95%;
+  }
+}
