--- a/app/src/index.css
+++ b/app/src/index.css
@@ -53,6 +53,7 @@ h4 {
   .home-title {
     border: solid 4px #7c726b;
     padding: 12px;
-    font-size: 24px;
+    font-size: 30px;
+    width: 95%;
   }
 }
