--- a/app/src/Styles/Header.css
+++ b/app/src/Styles/Header.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: flex-start;
   background-color: #eea2a5;
+  background-size: contain;
   width: 100%;
 }
 
@@ -47,5 +48,16 @@
   align-items: center;
   background-color: #eea2a5;
   width: 75%;
-  /* height: 36px; */
+}
+
+@media (max-width: 750px) {
+  .header-mobile {
+    overflow: hidden;
+    height: 25vh;
+  }
+
+ .header-img {
+    max-width: 125%;
+    height: auto;
+  }
 }
