--- a/app/src/Styles/MenuPopover.css
+++ b/app/src/Styles/MenuPopover.css
@@ -8,7 +8,7 @@
   font-size: 10px;
   line-height: .5;
   font-weight: 500;
-  height: 30px;
+  height: 100%;
   background-color: #eea2a5;
   color:white;
   box-shadow: 0 2px 10px var(--blackA7);
